<resources>
    <string name="app_name">eDMS v3</string>
    <string name="check_in">Nhập ghi chú</string>
    <string name="check_in_title">Ghi Nhận</string>
    <string name="check_out">Nhập ghi chú</string>
    <string name="setting">Cài đặt</string>
    <string name="makephone">Gọi điện</string>
    <string name="notice">Thông báo</string>
    <string name="position">Vị trí</string>
    <string name="get_location">Lấy vị trí</string>
    <string name="take_picture">Chụp hình</string>
    <string name="save_send">Lưu và gửi liền</string>
    <string name="view_contact">Xem liên lạc</string>
    <string name="edit_number_before_call">Sửa số trước khi gọi</string>
    <string name="copy_call_number">Sao chép liên lạc</string>
    <string name="reject_call">Chặn liên lạc</string>
    <string name="remove_reject_call">Bỏ chặn liên lạc</string>
    <string name="delete_call_log">Xóa nhật ký cuộc gọi này</string>
    <string name="delete_all_log_this_number">Xóa hết nhật ký cuộc gọi bởi số này</string>
    <string name="add_to_contact">Thêm liên lạc</string>
    <string name="enabled">Đã bật</string>
    <string name="disabled">Đã tắt</string>
    <string name="permissionlabel">Trình khởi chạy DMS</string>
    <string name="calllog">Cuộc gọi gần đây</string>
    <string name="home">Màn hình chính</string>
    <string name="app_dms">Ứng dụng DMS</string>
    <string name="hint_username">Tài khoản công ty</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="sign_in_title">Màn hình đăng nhập</string>
    <string name="change_pass_title">Màn hình đổi mật khẩu</string>
    <string name="err_msg_name">Nhập tên đăng nhập</string>
    <string name="err_msg_password">Nhập mật khẩu</string>
    <string name="err_msg_note">Nhập thông tin nhân viên</string>
    <string name="hint_password_old">Nhập mật khẩu cũ</string>
    <string name="hint_password_new">Nhập mật khẩu mới</string>
    <string name="hint_password_new_again">Nhập lại mật khẩu mới</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="err_msg_password_old">Nhập mật khẩu cũ</string>
    <string name="err_msg_password_new">Nhập mật khẩu mới</string>
    <string name="err_msg_password_new_again">Nhập lại mật khẩu mới</string>
    <string name="listorder_title">Danh sách đơn hàng</string>
    <string name="order">Đơn hàng</string>
    <string name="update">Cập nhật</string>
    <string name="notify">Báo cáo</string>
    <string name="no">Không</string>
    <string name="yes">Có</string>
    <string name="accept">Chấp nhận</string>
    <string name="questionexit">Bạn có muốn thoát ứng dụng?</string>
    <string name="money">&#160;VNĐ</string>
    <string name="err_msg_password_not_match">Mật khẩu mới không khớp</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="dms_slogan">Công ty TNHH Đầu Tư Phần Mềm Quản Lý DMS 18 Gò Cẩm Đệm, Phường 10, Quận Tân Bình, TP.HCM Điện thoại: (083) 602 8869 Mail: cty.dms@gmail.com</string>
    <string name="rememberLogin">Duy trì đăng nhập</string>
    <string name="sign_in_success">Đăng nhập thành công</string>
    <string name="sign_in_fail">Đăng nhập thất bại</string>
    <string name="change_pass_success">Đổi mật khẩu thành công</string>
    <string name="change_pass_fail">Đổi mật khẩu thất bại</string>
    <string name="title_activity_maps">Bản đồ</string>
    <string name="title_activity_get_location">Bản đồ</string>
    <string name="error_title">Lỗi</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="tagWL">WAKELOCK</string>
    <string name="tagEx">Exception</string>
    <string name="setAlarm">Alarm</string>
    <string name="app_design_name">Thiết kế bởi LTG</string>
    <string name="downline"> \n</string>
    <string name="spaceline">\t▒\t</string>
    <string name="enter_password">Nhập mật khẩu mở khóa</string>
    <string name="hint_search_app">Tìm ứng dụng...</string>
    <string name="list_app">Danh sách ứng dụng</string>
    <string name="alarm_null">Alarm is null</string>
    <string name="sms_location">vnd.android-dir/mms-sms</string>
    <string name="gmail_location">com.google.android.gm</string>
    <string name="phone_location">com.android.contacts</string>
    <string name="customer">Khách hàng</string>
    <string name="log_out">Đăng xuất</string>
    <string name="location_here">Vị trí hiện tại</string>
    <string name="location_wait">Đang lấy vị trí, vui lòng đợi trong giây lát.</string>
    <string name="location_none">Chưa có vị trí</string>
    <string name="location_none_help">Vui lòng nhấn phím V để lấy lại vị trí</string>
    <string name="notify_location">Vui lòng lấy vị trí</string>
    <string name="notify_take_photo">Vui lòng chụp hình</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="full_name">Tên đầy đủ :</string>
    <string name="username">Tên tài khoản :</string>
    <string name="ok">Đồng ý</string>
    <string name="notok">Launcher</string>
    <string name="reporting">Khởi động lại để tối ưu hóa ứng dụng...</string>
    <string name="device_name">Tên thiết bị</string>
    <string name="device_serial">Sêri thiết bị</string>
    <string name="unblock">Mở khóa</string>
    <string name="password_fail">Mật khẩu sai</string>
    <string name="staff_list">Tất cả nhân viên</string>
    <string name="threedot">...</string>
    <string name="loading">Đang tải...</string>
    <string name="menu">Danh mục</string>
    <string name="orderdetails">Chi tiết đơn hàng</string>
    <string name="back">Quay lại</string>
    <string name="order_completed">Đơn hàng giao thành công</string>
    <string name="order_cancel">Đơn hàng hủy bỏ</string>
    <string name="other">Lý do khác</string>
    <string name="input_note">Họ tên nhân viên</string>
    <string name="cancel_note">Ghi chú hủy bỏ</string>
    <string name="input_note_cancel">Nhập ghi chú hủy bỏ</string>
    <string name="change_status_success">Thay đổi trạng thái đơn hàng thành công</string>
    <string name="company_name">Tên công ty</string>
    <string name="employee_name">Tên nhân viên</string>
    <string name="update_program">Cập nhật phần mềm</string>
    <string name="update_order_success">Cập nhật đơn hàng thành công</string>
    <string name="update_order">ĐƠN HÀNG</string>
    <string name="cube_ptr_pull_down">Kéo xuống</string>
    <string name="cube_ptr_pull_down_to_refresh">Kéo xuống để làm mới</string>
    <string name="cube_ptr_release_to_refresh">Thả để làm mới</string>
    <string name="cube_ptr_refreshing">Đang cập nhật...</string>
    <string name="cube_ptr_refresh_complete">Đã cập nhật.</string>
    <string name="cube_ptr_last_update">last update:&#160;</string>
    <string name="cube_ptr_seconds_ago">&#160;seconds ago</string>
    <string name="cube_ptr_minutes_ago">&#160;minutes ago</string>
    <string name="cube_ptr_hours_ago">&#160;hours ago</string>
    <string name="footer">=====</string>
    <string name="done">Xong</string>
    <string name="failed">Lỗi</string>
    <string name="rangeDate">Chọn nhân viên để xem lộ trình</string>
    <string name="fromDate">Từ ngày</string>
    <string name="toDate">Đến ngày</string>
    <string name="pleaseselectstaff">Vui lòng chọn nhân viên</string>
    <string name="turn_on_gps">Bật GPS</string>
    <string name="turn_on_network">Bật Mạng 3G</string>
    <string name="turn_off_air">Tắt chế độ máy bay</string>
    <string name="manager">Chức năng</string>
    <string name="see_all">Vị trí tất cả nhân viên</string>
    <string name="btn_see_all">Xem chi tiết</string>
    <string name="please_open_network">Vui lòng kết nối mạng và thử lại</string>
    <string name="limit_version">Chức năng này chưa được kích hoạt</string>
    <string name="please_input_report">Vui lòng nhập ghi chú</string>
    <string name="restart_app">Khởi động lại ứng dụng</string>
    <string name="sign_up">Đăng ký</string>
    <string name="sending">Đang gửi..</string>
    <string name="send_success">Ghi nhận thành công</string>
    <string name="google_maps_key">AIzaSyDmbuvwa-e5cikSfgowd4kXURpWe_ViDlg</string>
    <string name="see_tracking">Xem lộ trình</string>
    <string name="app_version">Phiên bản App</string>
    <string name="device_version">Phiên bản OS</string>
    <string name="newlocation">Điểm mới nhất</string>
    <string name="none_staff">Không có nhân viên nào.</string>
    <string name="hide_tracking">Ẩn lộ trình</string>
    <string name="see_again">Xem lại</string>
    <string name="please_select_from_date">Ngày bắt đầu</string>
    <string name="please_select_to_date">Ngày kết thúc</string>
    <string name="pending">Thiết bị đã được đăng ký. Vui lòng liên hệ với quản trị viên để kích hoạt.</string>
    <string name="android">"Android "</string>
    <string name="not_confirm">Không xác định</string>
    <string name="shipping">Đang giao</string>
    <string name="success">Hoàn thành</string>
    <string name="reject">Từ chối</string>
    <string name="unknown">Không xác định</string>
    <string name="amount">"Tổng tiền: "</string>
    <string name="time">"Thời gian: "</string>
    <string name="phone">"SĐT: "</string>
    <string name="error_connect">Lỗi kết nối!</string>
    <string name="accuracy">"Độ chính xác "</string>
    <string name="list_gcm">Danh sách 10 thông báo gần nhất</string>
    <string name="hint_sms">Nhập tin nhắn</string>
    <string name="send">Gửi</string>
    <string name="saved_image">Ảnh đã được lưu tại :</string>
    <string name="error_download">Lỗi tải xuống ảnh :</string>
    <string name="none_notify">Không có thông báo mới</string>
    <string name="new_notify">Có thông báo mới... \n Bấm vào để xem</string>
    <string name="please_download_after_view">Vui lòng nhấn nút tải xuống trước khi mở.</string>
    <string name="file_exist">Ảnh này đã được tải về tại :</string>
    <string name="unlocation">Không có vị trí</string>
    <string name="image_exist">Ảnh đã được tải xuống</string>
    <string name="app_recent">Ứng dụng đã chạy gần đây</string>
    <string name="title_activity_lock_screen">LockScreen</string>
    <string name="see_again_date_limit">Xem lại chỉ hỗ trợ tối đa 3 ngày</string>
    <string name="see_all_date_limit">Xem chi tiết chỉ hỗ trợ tối đa 1 ngày</string>
    <string name="num0" translatable="false">0</string>
    <string name="num1" translatable="false">1</string>
    <string name="confirm_info_transaction">Ghi nhận thông tin giao dịch</string>
    <string name="status_transaction">Đang giao dịch/Lấy hàng/Giao hàng/Đặt hàng/Ghi nhận vấn đề</string>
    <string name="input_transaction_content">Nhập nội dung cho giao dịch</string>
    <string name="confirm">Xác nhận</string>
    <string name="log_in">Đăng nhập</string>
    <string name="note">Ghi chú: </string>
    <string name="load_order">Đang tải đơn hàng ...</string>
    <string name="take_again">Chụp lại</string>
    <string name="input_note_transaction">Nhập ghi chú giao dịch ..</string>
    <string name="update_again">Cập nhật lại</string>
    <string name="select_employee">Chọn nhân viên</string>
    <string name="thanks">Cảm ơn bạn đã tham gia khảo sát!</string>
    <string name="review">Xem lại</string>
    <string name="log_in_route">Đăng nhập tuyến</string>
    <string name="send_transaction">Gửi giao dịch</string>
    <string name="content_transaction">Nội dung giao dịch :</string>
    <string name="input_phone">Nhập số điện thoại</string>
    <string name="select_customer">Chọn khách hàng</string>
</resources>