<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/activity_send_transaction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.vietdms.mobile.dmslauncher.Forms.SendTransaction">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="Giao việc nhân viên"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:typeface="monospace" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/customer"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btn_select_customer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="2"
                        android:background="@drawable/button_note_drawable"
                        android:text="@string/select_customer"
                        android:textColor="@color/white_alpha" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/content_transaction" />

                    <EditText
                        android:id="@+id/edit_transaction_content"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:hint="@string/input_transaction_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/phone" />

                    <EditText
                        android:id="@+id/edit_transaction_phone"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:hint="@string/input_phone"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/note" />

                    <EditText
                        android:id="@+id/edit_transaction_note"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:hint="@string/input_note_transaction" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="5dp">


                    <com.vietdms.mobile.dmslauncher.CustomView.LoadingView
                        android:id="@+id/LoadingEmployee"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/margin_top"
                        app:lv_color="@android:color/white"
                        app:lv_loading="false"
                        app:lv_title="@string/load_order">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:text="@string/select_employee" />
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:orientation="horizontal"
                                android:layout_height="match_parent">
                                <Spinner
                                    android:id="@+id/spStaff"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:gravity="center_vertical"></Spinner>

                                <ImageButton
                                    android:id="@+id/img_refresh_employee"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_margin="5dp"
                                    android:background="@null"
                                    android:src="@drawable/restart_btn" />
                            </LinearLayout>

                        </LinearLayout>
                    </com.vietdms.mobile.dmslauncher.CustomView.LoadingView>
                </LinearLayout>
                <com.vietdms.mobile.dmslauncher.CustomView.LoadingView
                    android:id="@+id/SendTransactionLoading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/margin_top"
                    app:lv_color="@android:color/white"
                    app:lv_loading="false"
                    app:lv_title="@string/load_order">
                <Button
                    android:id="@+id/btn_send_transaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_note_drawable"
                    android:text="@string/send_transaction"
                    android:textColor="@color/white_alpha" />
                </com.vietdms.mobile.dmslauncher.CustomView.LoadingView>
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>
</layout>