<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/linearUpdateImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.vietdms.mobile.dmslauncher.CustomView.LoadingView
            android:id="@+id/UpdateImageLoadingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/lnTopmap"
            android:layout_centerInParent="true"
            app:lv_color="@android:color/black"
            app:lv_loading="false"
            app:lv_title="@string/loading">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgUpdateCustomerImage"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/update_take_again"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?attr/colorPrimary"
                        android:text="@string/take_again"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/update_again"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?attr/colorPrimary"
                        android:text="@string/update_again"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </LinearLayout>
        </com.vietdms.mobile.dmslauncher.CustomView.LoadingView>


    </LinearLayout>
</layout>
